@@ -1,5 +1,12 @@
 2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* slime.el (slime-pretty-package-name): Signalled an error on
+	simple symbols; fix that!
+
+	Reported by Geoff Wozniak.
+
+2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* slime.el (slime-current-form-path): Use
 	`slime-current-parser-state'.
 
